# face-id-door-lock

./: .gitignore  .gitmodules  PROJ300.pod  README.md
rpi/: CMakeLists.txt
rpi/src/: main.cc
